# ud-mcp

./: .gitignore  PLAN.md  README.md  SPLIT-PLAN.md  pyproject.toml
docs/: README.md  development.md
src/db_mcp_server/: __init__.py  main.py  server.py
src/db_mcp_server/adapters/: __init__.py  base.py  databricks.py  snowflake.py  sqlalchemy_base.py  sqlserver.py
src/db_mcp_server/config/: __init__.py  loader.py  models.py  secrets.py
src/db_mcp_server/drivers/: __init__.py  databricks_client.py  snowflake_engine.py  sqlserver_engine.py
src/db_mcp_server/mcp/: __init__.py  prompts.py  resources.py  schemas.py  tools.py
src/db_mcp_server/models/: __init__.py  connection.py  metadata.py  query.py  result.py
src/db_mcp_server/safety/: __init__.py  errors.py  limits.py  policies.py  sql_parser.py
src/db_mcp_server/services/: __init__.py  audit_service.py  connection_registry.py  metadata_service.py  query_service.py  result_formatter.py  validation_service.py
src/db_mcp_server/util/: __init__.py  logging.py  redact.py  timing.py
tests/adapters/: test_contracts.py  test_databricks_adapter.py
tests/config/: test_loader.py  test_secrets.py
tests/mcp/: test_smoke.py
tests/safety/: test_limits.py  test_policies.py  test_sql_parser.py
tests/services/: test_connection_registry.py  test_query_service.py  test_result_formatter.py
