[project]
name = "db-mcp-server"
version = "0.1.0"
description = "Universal Database MCP Server"
readme = "README.md"
authors = [
    { name = "Luis Canada", email = "dev@luisc.me" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
