[project]
name = "db-mcp-server"
version = "0.1.0"
description = "Universal Database MCP Server"
readme = "README.md"
authors = [
    { name = "Luis Canada", email = "dev@luisc.me" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "sqlalchemy>=2.0",
    "pydantic>=2",
    "sqlglot",
    "tenacity",
    "orjson",
    "pyodbc",
    "snowflake-sqlalchemy",
    "databricks-sql-connector[pyarrow]",
]

[project.optional-dependencies]
databricks-sqlalchemy = ["databricks-sqlalchemy"]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.6", "mypy>=1.10"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
